Updated background url to hopefully make it work

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header{
 }
 body{
 	color: white;
-	background-image: url(https://github.com/chanWright/about-me/background.jpg);
+	background-image: url(https://raw.githubusercontent.com/chanWright/about-me/master/background.jpg);
 }
 nav{
 	background-color: ;
