--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ header{
 }
 body{
 	color: white;
-	background-image: url(https://raw.githubusercontent.com/chanWright/about-me/master/background.jpg);
+	background-image: url(https://raw.githubusercontent.com/chanWright/about-me/master/background.jpg) no-repeat center fixed;
+	background-size: cover;
 }
 nav{
 	background-color: ;
