--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ header{
 }
 body{
 	color: white;
-	background-image: url(https://raw.githubusercontent.com/chanWright/about-me/master/background.jpg) no-repeat center fixed;
-	background-size: cover;
+	background-image: url(https://raw.githubusercontent.com/chanWright/about-me/master/background.jpg);
 }
 nav{
 	background-color: ;
